--- a/MindMap/MindMap.Windows/MindMap.Windows.csproj
+++ b/MindMap/MindMap.Windows/MindMap.Windows.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\Logo.scale-100.png" />
+    <Content Include="Assets\Logo.scale-180.png" />
     <Content Include="Assets\SmallLogo.scale-100.png" />
     <Content Include="Assets\SplashScreen.scale-100.png" />
     <Content Include="Assets\StoreLogo.scale-100.png" />
@@ -145,6 +146,12 @@
     <SDKReference Include="SQLite.WinRT81, Version=3.8.7.1">
       <Name>SQLite for Windows Runtime %28Windows 8.1%29</Name>
     </SDKReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\BackgroundSoundManager\BackgroundSoundManager.csproj">
+      <Project>{994b500c-12f5-4568-bfdd-e81db8cdb1ac}</Project>
+      <Name>BackgroundSoundManager</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
