--- a/MindMap/MindMap.WindowsPhone/MindMap.WindowsPhone.csproj
+++ b/MindMap/MindMap.WindowsPhone/MindMap.WindowsPhone.csproj
@@ -126,6 +126,12 @@
       <Name>SQLite for Windows Phone 8.1</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\BackgroundSoundManager\BackgroundSoundManager.csproj">
+      <Project>{994b500c-12f5-4568-bfdd-e81db8cdb1ac}</Project>
+      <Name>BackgroundSoundManager</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
